--- a/CrossValidation2.ipynb
+++ b/CrossValidation2.ipynb
@@ -6,7 +6,7 @@
       "name": "CrossValidation2.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyPsWG7FOQKu569MbA9IIjem",
+      "authorship_tag": "ABX9TyN45cWvXFcwt7t0CwexjSYS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,8 @@
         "id": "d4JYUxqLfD-T"
       },
       "source": [
-        "Let's compare cross validation on different models"
+        "Let's compare cross validation on different models. <br>\n",
+        "We use leave-one-out and K-fold CV on a wide variety of classification models."
       ]
     },
     {
@@ -68,7 +69,7 @@
         "from sklearn.ensemble import GradientBoostingClassifier\n",
         "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
         "from sklearn.discriminant_analysis import QuadraticDiscriminantAnalysis\n",
-        " "
+        ""
       ],
       "execution_count": null,
       "outputs": []
@@ -79,8 +80,19 @@
         "id": "ogi_qkRJf9qd"
       },
       "source": [
-        "Create a synthetic dataset"
+        "**Create a synthetic dataset**"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "number_samples=100"
+      ],
+      "metadata": {
+        "id": "joaFpKnaK8s6"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -89,10 +101,10 @@
       },
       "source": [
         "# create the dataset\n",
-        "#For the assignment, \n",
+        "#For the assignment,\n",
         "#Change the dataset here\n",
-        "def get_dataset(n_samples=100):\n",
-        "\tX, y = make_classification(n_samples=n_samples, n_features=20, \n",
+        "def get_dataset(n_samples=number_samples):\n",
+        "\tX, y = make_classification(n_samples=n_samples, n_features=20,\n",
         "                            n_informative=15, n_redundant=5, random_state=1)\n",
         "\treturn X, y"
       ],
@@ -155,7 +167,7 @@
         "id": "4uCPTeRrfWCm"
       },
       "source": [
-        "We will use k=10 "
+        "**We will use k=10 **"
       ]
     },
     {
@@ -164,9 +176,11 @@
         "id": "qZz39e2SfVg6"
       },
       "source": [
+        "n_s=10 #number of splits for k-fold\n",
+        "\n",
         "# define test conditions\n",
         "ideal_cv = LeaveOneOut()\n",
-        "cv = KFold(n_splits=10, shuffle=True, random_state=1)\n",
+        "cv = KFold(n_splits=n_s, shuffle=True, random_state=1)\n",
         "# get the list of models to consider\n",
         "models = get_models()\n",
         "# collect results\n",
@@ -189,45 +203,12 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "MlYDeUXugdRV"
-      },
-      "source": [
-        "# define test conditions\n",
-        "ideal_cv = LeaveOneOut()\n",
-        "cv = KFold(n_splits=10, shuffle=True, random_state=1)\n",
-        "# get the list of models to consider\n",
-        "models = get_models()\n",
-        "# collect results\n",
-        "ideal_results, cv_results = list(), list()\n",
-        "# evaluate each model\n",
-        "for model in models:\n",
-        "\t# evaluate model using each test condition\n",
-        "\tcv_mean = evaluate_model(cv, model)\n",
-        "\tideal_mean = evaluate_model(ideal_cv, model)\n",
-        "\t# check for invalid results\n",
-        "\tif isnan(cv_mean) or isnan(ideal_mean):\n",
-        "\t\tcontinue\n",
-        "\t# store results\n",
-        "\tcv_results.append(cv_mean)\n",
-        "\tideal_results.append(ideal_mean)\n",
-        "\t# summarize progress\n",
-        "\tprint('>%s: ideal=%.3f, cv=%.3f' % (type(model).__name__, ideal_mean, cv_mean))\n",
-        "# calculate the correlation between each test condition\n",
-        "corr, _ = pearsonr(cv_results, ideal_results)\n",
-        "print('Correlation: %.3f' % corr)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "jnn0E1t9g62b"
       },
       "source": [
-        "We can see that the correlation between the two sets.<bt>\n",
+        "We can see the correlation between the two sets.<bt>\n",
         "In this case, a high number is reported, which is a good strong positive correlation. The results suggest that 10-fold cross-validation does provide a good approximation for the LOOCV test on this dataset as calculated with 18 popular machine learning algorithms."
       ]
     },
@@ -260,7 +241,7 @@
       },
       "source": [
         "**Assignment**\n",
-        "After viewing the plot, we are inclined to use the 10-fold CV - for this dataset and the model. Maybe we should use support vector machines for this dataset. \n",
+        "After viewing the plot, we are inclined to use the 10-fold CV - for this dataset and the model. Maybe we should use support vector machines for this dataset.\n",
         "\n",
         "Now, let's change the dataset. <br>\n",
         "- Change the number of samples\n",
