--- a/CrossValidation1.ipynb
+++ b/CrossValidation1.ipynb
@@ -25,19 +25,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "NG_bC5qLDIdI"
-      },
-      "source": [
-        "# Clone the entire repo.\n",
-        "!git clone -s https://github.com/cagBRT/Machine-Learning.git cloned-repo\n",
-        "%cd cloned-repo"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "skeDVtEBtb25"
@@ -163,6 +150,17 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "number_samples=1000"
+      ],
+      "metadata": {
+        "id": "unke4M2wPxkG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "S9D9xB-OKdRj"
       },
@@ -170,9 +168,21 @@
         "# demonstrate that the train-test split procedure is repeatable\n",
         "from sklearn.datasets import make_blobs\n",
         "from sklearn.model_selection import train_test_split\n",
-        "# create dataset\n",
-        "X, y = make_blobs(n_samples=1000)"
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.metrics import accuracy_score"
       ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# create dataset\n",
+        "X, y = make_blobs(n_samples=number_samples)"
+      ],
+      "metadata": {
+        "id": "quqTjklZP41i"
+      },
       "execution_count": null,
       "outputs": []
     },
@@ -202,8 +212,6 @@
         "id": "KjhkqTqzJdGi"
       },
       "source": [
-        "from sklearn.ensemble import RandomForestClassifier\n",
-        "from sklearn.metrics import accuracy_score\n",
         "print(X.shape, y.shape)\n",
         "# split into train test sets\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20,\n",
@@ -393,7 +401,7 @@
         "id": "CM4s1KlzB-5z"
       },
       "source": [
-        "Setup the K-fold"
+        "**Setup the K-fold**"
       ]
     },
     {
@@ -436,6 +444,17 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "number_splits=3"
+      ],
+      "metadata": {
+        "id": "B_JmpqKnPm0k"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "wzVgFXQxWAaR"
       },
@@ -446,7 +465,7 @@
         "# data sample\n",
         "data = array([0.1, 0.2, 0.3, 0.4, 0.5, 0.6])\n",
         "# prepare cross validation\n",
-        "kfold = KFold( n_splits=3,shuffle=True)\n",
+        "kfold = KFold( n_splits=number_splits,shuffle=True)\n",
         "\n",
         "# enumerate splits\n",
         "for train, test in kfold.split(data):\n",
@@ -593,13 +612,24 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "number_samples=100"
+      ],
+      "metadata": {
+        "id": "dHLz48ovPd9E"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "dzUsh1wfa520"
       },
       "source": [
         "# create the dataset\n",
         "#Change the dataset size here:\n",
-        "def get_dataset(n_samples=100):\n",
+        "def get_dataset(n_samples=number_samples):\n",
         "\tX, y = make_classification(n_samples=n_samples, n_features=20,\n",
         "                            n_informative=15, n_redundant=5,\n",
         "                            random_state=1)\n",
