--- a/CrossValidation2.ipynb
+++ b/CrossValidation2.ipynb
@@ -6,7 +6,7 @@
       "name": "CrossValidation2.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyN45cWvXFcwt7t0CwexjSYS",
+      "authorship_tag": "ABX9TyOdyXECKxU2DSdXcnvoInY3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,6 +24,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/cagBRT/Machine-Learning/blob/master/CrossValidation2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Cross Validation"
+      ],
+      "metadata": {
+        "id": "fzfy4Z__QgUc"
+      }
     },
     {
       "cell_type": "markdown",
@@ -167,7 +176,7 @@
         "id": "4uCPTeRrfWCm"
       },
       "source": [
-        "**We will use k=10 **"
+        "**We will use k=10**"
       ]
     },
     {
@@ -240,7 +249,7 @@
         "id": "inGOWJFmilDH"
       },
       "source": [
-        "**Assignment**\n",
+        "**Assignment**<br>\n",
         "After viewing the plot, we are inclined to use the 10-fold CV - for this dataset and the model. Maybe we should use support vector machines for this dataset.\n",
         "\n",
         "Now, let's change the dataset. <br>\n",
