--- a/Logistic_Regression_NB1.ipynb
+++ b/Logistic_Regression_NB1.ipynb
@@ -8,7 +8,7 @@
       "provenance": [],
       "machine_shape": "hm",
       "gpuType": "L4",
-      "authorship_tag": "ABX9TyMVYoWoNdyfrWk4WMNaxAyg",
+      "authorship_tag": "ABX9TyP7IVurWm32OljvcZR9TNUO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,17 +82,42 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "number_samples=300\n",
+        "num_features=2"
+      ],
+      "metadata": {
+        "id": "5oxJBIFtfkaj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "RqkIsZkit5V7"
       },
       "source": [
         "# create dataset\n",
         "X, y = make_blobs(\n",
-        "   n_samples=300, n_features=2,\n",
-        "   centers=2, cluster_std=0.5,\n",
-        "   shuffle=True, random_state=0\n",
+        "   n_samples=number_samples, n_features=num_features,\n",
+        "   centers=2, cluster_std=0.9,\n",
+        "   shuffle=True, random_state=0,\n",
         ")"
       ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#class_sep 0.1-0.9\n",
+        "#X,y = make_classification(n_samples=300, n_features=4,\n",
+        "#                          n_classes=2, n_clusters_per_class=1, class_sep=0.5)"
+      ],
+      "metadata": {
+        "id": "0FvfC9cChnV1"
+      },
       "execution_count": null,
       "outputs": []
     },
