--- a/LinearRegression1.ipynb
+++ b/LinearRegression1.ipynb
@@ -6,7 +6,7 @@
       "name": "LinearRegression1.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOUWQ192ESypO9V3GGLfFL1",
+      "authorship_tag": "ABX9TyOH+qWZ26JOi9QXgltiGKqN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -228,6 +228,17 @@
         "print('Mean Squared Error:', metrics.mean_squared_error(y_test, y_pred))\n",
         "print('Root Mean Squared Error:', np.sqrt(metrics.mean_squared_error(y_test, y_pred)))"
       ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "reg.score(X_test,y_pred)"
+      ],
+      "metadata": {
+        "id": "006oOI9XeKgD"
+      },
       "execution_count": null,
       "outputs": []
     },
